--- a/index.html
+++ b/index.html
@@ -242,18 +242,52 @@
   </div>
 </div>
 <!-- MODAL 2 END -->
+
 <!-- MODAL 3 -->
-<div id="restModal" class="modal fade" role="dialog">
+<div id="restaurantModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">REST API</h4>
+        <h4 class="modal-title">Restaurant ordering system</h4>
       </div>
       <div class="modal-body">
-        <p>Moneyses Django REST Framework to provede JSON data to users.</p>
+        <a href="https://restaurant-order-tracker.herokuapp.com/" class="thumbnail" target="_blank">
+          <img src="img/DRF_Bank.png" alt="restaurant-order-tracker">
+        </a>
+        <a style="background-color:#366CAB; border-color:#366CAB" href="https://restaurant-order-tracker.herokuapp.com/" class="btn btn-info" role="button" target="_blank">Live Example</a>
+        <a style="background-color:#366CAB; border-color:#366CAB" href="https://github.com/ConnorFieldUser/django-ordering-system" class="btn btn-info" role="button" target="_blank">Code</a>
+
+
+        <p> Django Restaurant has several features for a restaurant ordering system and uses a many to many through relationship. </p>
+        <p> Control over the menu, a log of all orders and a tracker for which items have been prepared or served. </p>
+        <ul>
+          <h3>
+          <li>Python</li>
+
+          <li>Django</li>
+
+          <li>gunicorn</li>
+
+          <li>Heroku</li>
+
+          <li>Gunicorn WSGI </li>
+
+          <li>Psycopg2</li>
+
+          <li>dj-database-url</li>
+
+          <li>django-extra-views</li>
+
+          <li>WhiteNoise</li>
+
+          <li>Bootstrap</li>
+
+          <li>HTML/CSS/SCSS</li>
+          </ul>
+          </h3>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -279,10 +313,12 @@
 
   </p>
    <!-- </div> -->
+   <p>
+        <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#restaurantModal">Restaurant ordering system</button>
+
+  </p>
    <br><br><br><br>
-   <!-- <div class="col-xs-6 col-md-3">
-       <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#restModal">Random Character Selector</button>
-   </div> -->
+
    <!-- <div class="col-xs-6 col-md-3">
        <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#restModal">Ruby app</button>
    </div> -->
