--- a/index.html
+++ b/index.html
@@ -348,7 +348,11 @@
                     <li style="text-decoration: ;">CSS</li>
                     <li style="text-decoration: ;">Git</li>
                     <li style="text-decoration: ;">SQL</li>
+                    <li style="text-decoration: ;">JavaScript</li>
                     <li style="text-decoration: ;">zhs/bash</li>
+                    <li style="text-decoration: ;" >JQuery</li>
+                    <li style="text-decoration: ;">PHP</li>
+                    <li style="text-decoration  ;">Laravel</li>
                     <hr>
                   </h4>
                  </ul>
